# ytop

./: .editorconfig  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: create-release.yml  deploy.yml  publish-binaries.yml  release-binaries.yml  rust-ci.yml  rust.yml
ci/: script.sh
colorschemes/: default-dark.json  default.json  dracula.json  gruvbox.json  monokai.json  solarized-dark.json  vice.json
data/: com.github.cjbassi.ytop.appdata.xml  com.github.cjbassi.ytop.desktop
package-publisher/: Cargo.toml
package-publisher/src/: main.rs
package-publisher/templates/: aur  aur-bin  aur-git  homebrew
src/: app.rs  args.rs  colorscheme.rs  draw.rs  main.rs  sparkline.rs  update.rs
src/utils/: conversions.rs  mod.rs
src/widgets/: battery.rs  block.rs  cpu.rs  disk.rs  help_menu.rs  mem.rs  mod.rs  net.rs  proc.rs  statusbar.rs  temp.rs
