[package]
name = "rtop"
version = "0.1.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
license = "MIT"
description = "A TUI system monitor written in Rust"
edition = "2018"

[dependencies]
anyhow = "1.0.17"
chrono = "0.4.9"
crossbeam-channel = "0.3.9"
crossbeam-utils = "0.6.6"
crossterm = "0.12.1"
ctrlc = { version = "3.1.3", features = ["termination"] }
fern = "0.5.9"
hostname = "0.1.5"
lazy_static = "1.4.0"
log = "0.4.8"
num_cpus = "1.10.1"
num-rational = "0.2.2"
platform-dirs = "0.2.0"
psutil = "1.7.0"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
size = "0.1.2"
structopt = "0.3.3"
# tui = { version = "0.6.2", features = ["crossterm"] }
tui = { git = "https://github.com/theduke/tui-rs", branch = "upgrade-crossterm", features = ["crossterm"] }
