[package]
name = "ytop"
version = "0.3.0"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
license = "MIT"
description = "A TUI system monitor written in Rust"
edition = "2018"

[dependencies]
anyhow = "1.0.26"
battery = "0.7.5"
better-panic = "0.2.0"
chrono = "0.4.10"
crossbeam-channel = "0.4.0"
crossterm = "0.14.1"
ctrlc = { version = "3.1.3", features = ["termination"] }
fern = "0.5.9"
log = "0.4.8"
num-rational = "0.2.2"
once_cell = "1.3.1"
platform-dirs = "0.2.0"
# psutil = "1.7.0"
psutil = { git = "https://github.com/borntyping/rust-psutil" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
size = "0.1.2"
structopt = "0.3.7"
# tui = { version = "0.8.0", features = ["crossterm"] }
tui = { git = "https://github.com/cjbassi/tui-rs", branch = "master", default-features = false, features = ["crossterm"] }
