[package]
name = "ytop"
version = "0.6.1"
authors = ["Caleb Bassi <calebjbassi@gmail.com>"]
license = "MIT"
description = "A TUI system monitor written in Rust"
edition = "2018"

[dependencies]
battery = "0.7.5"
better-panic = "0.2.0"
chrono = "0.4.11"
crossbeam-channel = "0.4.2"
crossterm = "0.17.4"
ctrlc = { version = "3.1.4", features = ["termination"] }
fern = "0.6.0"
log = "0.4.8"
num-rational = "0.2.4"
once_cell = "1.3.1"
platform-dirs = "0.2.0"
psutil = "3.1.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
size = "0.1.2"
structopt = "0.3.14"
tui = { version = "0.9.2", default-features = false, features = ["crossterm"] }

[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = "0.14.1"
